syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "OnlinePlayerInfo.proto";

// CmdId: 49
// EnetChannelId: 0
// EnetIsReliable: true
message GetOnlinePlayerListRsp {
	int32 retcode = 12;
	repeated OnlinePlayerInfo player_info_list = 10;
	uint32 param = 2;
}
